# LineFittingMethod

./: CMakeLists.txt  Example.cpp  README.md  license.txt
include/: dbot.h  plot.h
src/: dbot.cpp
